tests/ui/typeck/issue-88643.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for statics
  --> $DIR/issue-88643.rs:10:56
   |
LL | static CALLBACKS: HashMap<*const dyn T, dyn FnMut(&mut _) + 'static> = HashMap::new();
   |                                                        ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for statics
  --> $DIR/issue-88643.rs:13:33
   |
LL | static CALLBACKS2: Vec<dyn Fn(& _)> = Vec::new();
   |                                 ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for statics
  --> $DIR/issue-88643.rs:16:36
   |
LL | static CALLBACKS3: Option<dyn Fn(& _)> = None;
   |                                    ^ not allowed in type signatures

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0121`.
